[gd_scene load_steps=4 format=3 uid="uid://x001w58otuma"]

[ext_resource type="Script" uid="uid://djnwg2u7ovha8" path="res://GameFiles/Gameplay Scripts/Obstacles/Missile/MissileMark.gd" id="1_ebrs5"]
[ext_resource type="AudioStream" uid="uid://dr48wcdkjf3gb" path="res://GameFiles/SoundEffects/MissilesBeep.mp3" id="2_pmq27"]
[ext_resource type="Texture2D" uid="uid://dujccbcfcsr8i" path="res://GameFiles/SpinHead IMGS/Missile/MissileMarker.png" id="3_yvdht"]

[node name="MissileMark" type="Node2D"]
script = ExtResource("1_ebrs5")

[node name="MissileBeep" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_pmq27")
volume_db = 6.0
pitch_scale = 2.0
autoplay = true

[node name="MissileMarker" type="Sprite2D" parent="."]
z_index = 3
z_as_relative = false
texture = ExtResource("3_yvdht")

[connection signal="finished" from="MissileBeep" to="." method="_on_missile_beep_finished"]
